// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Display tests should display checkbox group correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component checkbox vertical"
      >
        <span
          class="label label"
        >
          Заголовок группы
        </span>
        <div
          class="checkboxList checkboxList"
        >
          <label
            class="component size-20 start my-checkbox checkbox"
          >
            <input
              type="checkbox"
            />
            <span
              class="box"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Первый вариант
              </span>
            </span>
          </label>
          <label
            class="component size-20 start checkbox"
          >
            <input
              type="checkbox"
            />
            <span
              class="box"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Второй вариант
              </span>
            </span>
          </label>
          <label
            class="component size-20 start checkbox"
          >
            <input
              type="checkbox"
            />
            <span
              class="box"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Третий вариант
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component checkbox vertical"
    >
      <span
        class="label label"
      >
        Заголовок группы
      </span>
      <div
        class="checkboxList checkboxList"
      >
        <label
          class="component size-20 start my-checkbox checkbox"
        >
          <input
            type="checkbox"
          />
          <span
            class="box"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Первый вариант
            </span>
          </span>
        </label>
        <label
          class="component size-20 start checkbox"
        >
          <input
            type="checkbox"
          />
          <span
            class="box"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Второй вариант
            </span>
          </span>
        </label>
        <label
          class="component size-20 start checkbox"
        >
          <input
            type="checkbox"
          />
          <span
            class="box"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Третий вариант
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox Display tests should display checkbox group with error correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component checkbox vertical error"
      >
        <span
          class="label label"
        >
          Заголовок группы
        </span>
        <div
          class="checkboxList checkboxList"
        >
          <label
            class="component size-20 start my-checkbox checkbox"
          >
            <input
              type="checkbox"
            />
            <span
              class="box"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Первый вариант
              </span>
            </span>
          </label>
          <label
            class="component size-20 start checkbox"
          >
            <input
              type="checkbox"
            />
            <span
              class="box"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Второй вариант
              </span>
            </span>
          </label>
          <label
            class="component size-20 start checkbox"
          >
            <input
              type="checkbox"
            />
            <span
              class="box"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Третий вариант
              </span>
            </span>
          </label>
        </div>
        <span
          class="sub sub errorMessage"
          role="alert"
        >
          Error
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component checkbox vertical error"
    >
      <span
        class="label label"
      >
        Заголовок группы
      </span>
      <div
        class="checkboxList checkboxList"
      >
        <label
          class="component size-20 start my-checkbox checkbox"
        >
          <input
            type="checkbox"
          />
          <span
            class="box"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Первый вариант
            </span>
          </span>
        </label>
        <label
          class="component size-20 start checkbox"
        >
          <input
            type="checkbox"
          />
          <span
            class="box"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Второй вариант
            </span>
          </span>
        </label>
        <label
          class="component size-20 start checkbox"
        >
          <input
            type="checkbox"
          />
          <span
            class="box"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Третий вариант
            </span>
          </span>
        </label>
      </div>
      <span
        class="sub sub errorMessage"
        role="alert"
      >
        Error
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox Display tests should display checkbox group with one child correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component checkbox vertical"
      >
        <span
          class="label label"
        >
          Заголовок группы
        </span>
        <div
          class="checkboxList checkboxList"
        >
          <label
            class="component size-20 start my-checkbox checkbox"
          >
            <input
              type="checkbox"
            />
            <span
              class="box"
            />
            <span
              class="content"
            >
              <span
                class="label"
              >
                Первый вариант
              </span>
            </span>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component checkbox vertical"
    >
      <span
        class="label label"
      >
        Заголовок группы
      </span>
      <div
        class="checkboxList checkboxList"
      >
        <label
          class="component size-20 start my-checkbox checkbox"
        >
          <input
            type="checkbox"
          />
          <span
            class="box"
          />
          <span
            class="content"
          >
            <span
              class="label"
            >
              Первый вариант
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox Display tests should display tag group correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component tag vertical"
      >
        <span
          class="label label"
        >
          Заголовок группы
        </span>
        <div
          class="checkboxList"
        >
          <label
            class="checkbox tagLabel"
          >
            <button
              class="component component component s s outlined outlined rounded outlined my-tag"
              type="button"
            >
              <span>
                Первый вариант
              </span>
            </button>
            <input
              autocomplete="off"
              class="hiddenInput"
              tabindex="-1"
              type="checkbox"
            />
          </label>
          <label
            class="checkbox tagLabel"
          >
            <button
              class="component component component s s outlined outlined rounded outlined"
              type="button"
            >
              <span>
                Второй вариант
              </span>
            </button>
            <input
              autocomplete="off"
              class="hiddenInput"
              tabindex="-1"
              type="checkbox"
            />
          </label>
          <label
            class="checkbox tagLabel"
          >
            <button
              class="component component component s s outlined outlined rounded outlined"
              type="button"
            >
              <span>
                Третий вариант
              </span>
            </button>
            <input
              autocomplete="off"
              class="hiddenInput"
              tabindex="-1"
              type="checkbox"
            />
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component tag vertical"
    >
      <span
        class="label label"
      >
        Заголовок группы
      </span>
      <div
        class="checkboxList"
      >
        <label
          class="checkbox tagLabel"
        >
          <button
            class="component component component s s outlined outlined rounded outlined my-tag"
            type="button"
          >
            <span>
              Первый вариант
            </span>
          </button>
          <input
            autocomplete="off"
            class="hiddenInput"
            tabindex="-1"
            type="checkbox"
          />
        </label>
        <label
          class="checkbox tagLabel"
        >
          <button
            class="component component component s s outlined outlined rounded outlined"
            type="button"
          >
            <span>
              Второй вариант
            </span>
          </button>
          <input
            autocomplete="off"
            class="hiddenInput"
            tabindex="-1"
            type="checkbox"
          />
        </label>
        <label
          class="checkbox tagLabel"
        >
          <button
            class="component component component s s outlined outlined rounded outlined"
            type="button"
          >
            <span>
              Третий вариант
            </span>
          </button>
          <input
            autocomplete="off"
            class="hiddenInput"
            tabindex="-1"
            type="checkbox"
          />
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox Display tests should display with children like boolean or string or others react children type correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="component checkbox vertical"
      >
        <span
          class="label label"
        >
          Заголовок группы
        </span>
        <div
          class="checkboxList checkboxList"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="component checkbox vertical"
    >
      <span
        class="label label"
      >
        Заголовок группы
      </span>
      <div
        class="checkboxList checkboxList"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
